--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
+
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>Home</title>
+	<link href="styles.css" rel="stylesheet" type="text/css">
+	<!-- RESPONSIVE CODE -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--You need this link for the hamburger menu-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+
+	<meta name="description" content="Duke's Moonshine Distillery">
+	<meta name="keywords" content="moonshine, hazzard, duke boys">
+	<meta name="author" content="Charlotte Schepers">
+
+</head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+  <div class="header-img">
 
-</body>
-</html> 
+	<h1>
+		<a href="index.html">
+			<img id="logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
+		</a>
+	</h1>
+</div>
+
+
+ 	<!-- Navigation with hamburger menu when mobile -->
+	<nav class="topnav" id="myTopnav">
+	     <a href="index.html" class="active">Home</a>
+	     <a href="about.html">Our Story</a>
+	     <a href="port.html">Store</a>
+	     <a href="location.html">Location</a>
+       <a href="contact.html">Contact</a>
+
+		<!-- Dont change the link below -->
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+	</nav>
