--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
  	<!-- Navigation with hamburger menu when mobile -->
 	<nav class="topnav" id="myTopnav">
-	     <a href="index.shtml" class="active">Home</a>
+	     <a href="index.html" class="active">Home</a>
 	     <a href="about.html">Our Story</a>
 	     <a href="store.html">Store</a>
 	     <a href="location.html">Location</a>
