--- a/intro.html
+++ b/intro.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Duke's</title>
+
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<!-- RESPONSIVE CODE -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +23,9 @@
 <body>
 
 <img class="intro-logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
-<h2> Wait a Second! Are You At Least 21 Years of Age?</h2>
-<p> By clicking yes, you are agreeing that you are of legal age.</p>
-<button onclick="https://cschepers0002.github.io/dukes/index.html">Yes! Yee-haw!</button>
-<button onclick="https://cschepers0002.github.io/dukes/default.html">Not yet! Dang-it!</button>
+<h2 class="centered"> Wait a Second! Are You At Least 21 Years of Age?</h2>
+<p class="centered"> By clicking yes, you are agreeing that you are of legal age.</p>
+<button class="intro-button" onclick="index.html">Yes! Yee-haw!</button>
+<button class="intro-button" onclick="https://cschepers0002.github.io/dukes/default.html">Not yet! Dang-it!</button>
 
 </body>
