--- a/intro.html
+++ b/intro.html
@@ -25,7 +25,7 @@
 <img class="intro-logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
 <h2 class="centered"> Wait a Second! Are You At Least 21 Years of Age?</h2>
 <p class="centered"> By clicking yes, you are agreeing that you are of legal age.</p>
-<button class="intro-button" onclick="index.html">Yes! Yee-haw!</button>
+<button class="intro-button" a href="index.html">Yes! Yee-haw!</button>
 <button class="intro-button" onclick="https://cschepers0002.github.io/dukes/default.html">Not yet! Dang-it!</button>
 
 </body>
