updated intro, index pages & styles css

--- a/default.html
+++ b/default.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Home</title>
+	<title>Duke's</title>
+
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<!-- RESPONSIVE CODE -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,35 +22,6 @@
 
 <body>
 
-
-<!-- Navigation with hamburger menu when mobile -->
-	<nav class="topnav" id="myTopnav">
-	     <a href="index.html" class="active">Home</a>
-	     <a href="about.html">Our Story</a>
-	     <a href="store.html">Store</a>
-	     <a href="location.html">Location</a>
-       <a href="contact.html">Contact</a>
-
-
-
-		<!-- Dont change the link below -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-	</nav>
-
-
-<div class="header-img">
-
-<a href="index.html">
-	<img id="logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
-</a>
-
-<h2>Welcome!</h2>
-
-</div>
-
-
-
-
-</body>
+<h3> We Know Your Just a Good Ol' Person, Who Didn't Mean
+  Any Harm, but You Are Just Not Quite Old Enough!</h3>
+<p>You come back and see us later don't ya hear!</p>
