updating index.html

--- a/index.html
+++ b/index.html
@@ -33,23 +33,41 @@
 
 
 		<!-- Dont change the link below -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0)" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
 	</nav>
 
 
-<div class="header-img">
+
 
 <a href="index.html">
 	<img id="logo" src="images/logo1.png" alt="Duke's Moonshine Distillery">
 </a>
 
+<div class="orange-bar">
 <h2>Welcome!</h2>
+ </div>
 
-</div>
 
-<div class="index-hero"> </div>
+
+<container class="sign-buttons">
+<a href="contact.html">
+<img class="taste" src="images/taste.png">
+</a>
+
+<a href="contact.html">
+<img class="tour" src="images/tour.png">
+</a>
+
+<a href="contact.html">
+<img class="virt" src="images/virt.png">
+</a>
+</container>
+
+
+
+
 
 
 
