index.html updates, hero and headline tag

--- a/index.html
+++ b/index.html
@@ -55,17 +55,11 @@
   <button class="button button2">View Our Photo Gallery</button>
 </div>
 
-<h3>We're Happy You Stopped By!</h3>
-<p>We'd thought we'd tell ya a little bit about us. <br>
-  Duke's Moonshine Distillery was first started in a barn, but <br> now is a state-of-the-art
-  distillery on a campus located in Hazzard County, Kentucky. </p>
+<h2>Duke's Moonshine</h2>
+<h3>Est. 1974</h3>
 
-<!-- <section class="off-white ">
-  <h3>We're Happy You Stopped By!</h3>
-  <p>We'd thought we'd tell ya a little bit about us. <br>
-    Duke's Moonshine Distillery was first started in a barn, but <br> now is a state-of-the-art
-    distillery on a campus located in Hazzard County, Kentucky. </p>
-</section> -->
+<p>We are honored you paid us a visit! Duke’s Moonshine Distillery is and will always be a staple of Hazzard County, Kentucky.<br>We honor our roots and embrace change as we grow as a company each and every day. We strive to make our founder, Jesse Duke, <br>proud of what his original bootleg scheme became! We hope to see ya around!</p>
 
+<div class="header-img"></div>
 </body>
 </html>
