about and products sections, index.html

--- a/index.html
+++ b/index.html
@@ -50,16 +50,35 @@
 </div>
 
 <div class="off-white centered">
+  <h1>Stop on by! We'd Love to See ya!</h1>
   <button class="button button2">Book a Tour</button>
   <button class="button button2">Book a Tasting Experience</button>
   <button class="button button2">View Our Photo Gallery</button>
 </div>
 
-<h2>Duke's Moonshine</h2>
-<h3>Est. 1974</h3>
 
-<p>We are honored you paid us a visit! Duke’s Moonshine Distillery is and will always be a staple of Hazzard County, Kentucky.<br>We honor our roots and embrace change as we grow as a company each and every day. We strive to make our founder, Jesse Duke, <br>proud of what his original bootleg scheme became! We hope to see ya around!</p>
 
 <div class="header-img"></div>
+
+
+<h2 id="about">Our Story</h2>
+
+
+<p>Duke’s Moonshine Distillery today is definitely different than from when it first started out. Duke’s has always been a family company and is still run by the family today. Founder, Jesse Duke, first started making moonshine when it was illegal. He would be considered a criminal for making our award-winning moonshine back then. He hid his moonshine still in the barn on the Duke farm and narrowly evaded law enforcement several times. The police at the time, knew he was up to know good, but all Jesse wanted to do was make his moonshine!<br>
+<br>
+He even had his young nephews making bootleg deliveries for him throughout the town. Duke’s moonshine was sought after by every farmer in the county. It quickly became a whole family ordeal, having to produce enough moonshine for the whole town! It was not until much later, laws were created to protect moonshiners. After a grueling process and specifically mandated equipment, Duke’s was legally up and running.<br>
+<br>
+Now, some may frown up Jesse Duke for his illegal activity, but we consider it to be part of the heritage of our company along with the history of the town. Jesse’s nephews, Bo and Luke Duke, were in charge during the transition to legalize and standardize the company. Once up and running, distribution started to spread from just the county to the state to the whole country. Duke’s Moonshine’s high quality is what sets it apart from other distilleries. Even when Bo and Luke taste the moonshine to this day, they swear their Uncle Jesse made it in the barn. <br>
+<br>
+The company has expanded over the years with the help of a great team. What started out as just a still in a single building, is now a beautiful campus spanning several acres. We offer tours around the campus along with moonshine tastings. We can’t wait for ya to visit! <br>
+
+</p>
+
+<div class="products">
+<img class="products-img" src="images/products.png" alt="moonshine jars">
+<!-- <div class="blue">Get Your Hands On</div> -->
+
+</div>
+
 </body>
 </html>
