about, and products section added to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#about">Our Story</a>
             </li>
             <li class="menu-item">
-                <a href="#store">Store</a>
+                <a href="#products">Products</a>
             </li>
             <li class="menu-item">
                 <a href="#location">Location</a>
@@ -74,11 +74,42 @@ The company has expanded over the years with the help of a great team. What star
 
 </p>
 
-<div class="products">
+<div id="products" class="products">
 <img class="products-img" src="images/products.png" alt="moonshine jars">
-<!-- <div class="blue">Get Your Hands On</div> -->
-
+<div class="brown-shadow">Get Your Hands On</div>
+<p class="brown-text">HANDCRAFTED MOONSHINE</p>
 </div>
+
+<h2>Interested in More?</h2>
+<p> We distill and create each and every Duke's jar at our Hazzard County distillery. We have a variety of flavors available to purchase in many stores. We often sell seasonal flavors, so keep an eye out!</p>
+
+<div class="row">
+
+<ul>
+  <div class="column">
+  <li>Apple Pie</li>
+  <li>White Lightning</li>
+  <li>Lemon Drop</li>
+  <li>Watermelon</li>
+  <li>Coffee</li>
+
+
+  </div>
+  <div class="column">
+  <li>Straight</li>
+  <li>Peach</li>
+  <li>Orange Cream</li>
+  <li>Cinnamon</li>
+    <li>Sweet Tea</li>
+  </div>
+</ul>
+</div>
+
+
+
+
+
+
 
 </body>
 </html>
