--- a/index.html
+++ b/index.html
@@ -105,11 +105,18 @@ The company has expanded over the years with the help of a great team. What star
 </ul>
 </div>
 
+<
+<div class="blue-cover">
+<div class="row">
+<div class="column">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50807.199854660656!2d-83.23559071460049!3d37.2607550804076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8844c88c5bedbb27%3A0x485ecf9d61641623!2sHazard%2C%20KY!5e0!3m2!1sen!2sus!4v1650849989904!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
+<div class"column">
 
+</div>
 
-
-
+</div>
+</div>
 
 </body>
 </html>
