updated location and contact section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#products">Products</a>
             </li>
             <li class="menu-item">
-                <a href="#location">Location</a>
+                <a href="#map">Location</a>
             </li>
             <li class="menu-item">
                 <a href="#contact">Contact</a>
@@ -54,6 +54,8 @@
   <button class="button button2">Book a Tour</button>
   <button class="button button2">Book a Tasting Experience</button>
   <button class="button button2">View Our Photo Gallery</button>
+  <br>
+  <br>
 </div>
 
 
@@ -105,17 +107,104 @@ The company has expanded over the years with the help of a great team. What star
 </ul>
 </div>
 
-<
-<div class="blue-cover">
-<div class="row">
+
+<!-- <div class="row">
 <div class="column">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50807.199854660656!2d-83.23559071460049!3d37.2607550804076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8844c88c5bedbb27%3A0x485ecf9d61641623!2sHazard%2C%20KY!5e0!3m2!1sen!2sus!4v1650849989904!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
 <div class"column">
+  <div class="wrapper2">
+<form action="thanks.html">
+            <h2>Contact Us</h2>
+            <hr>
+            <p>Whether you just have a question, want to book a tour, or experience a tasting, fill out the form below and a Duke's representative will reach out to you as soon as possible. The quickest way to get an answer is to call our office at 606.223.3478 <br>
+             <br>
+            </p>
+           <br>
+           <label>First Name <br>
+           <input type="text" id="first-name" name="first-name" required></label>
+           <label>Last Name <br>
+           <input type="text" id="last-name" name="last-name" required></label>
+           <label>Email <br>
+           <input type="email" id="email" name="email" required></label>
+           <label>Phone Number<br>
+           <input type="phone" id="phone" name="phone" required></label>
 
-</div>
 
-</div>
+
+           <label>Message: <br>
+           <textarea id="message" required></textarea></label>
+
+           <p>Please indicate what subject your message involves:</p>
+         <ul>
+           <li><input class="checkbox" type="checkbox" name="tour" id="tour" value="tour" class="svc">Booking a Tour</li>
+           <li><input class="checkbox" type="checkbox" name="taste" id="taste" value="taste" class="svc">Experience a Moonshine Tasting</li>
+           <li><input class="checkbox" type="checkbox" name="general" id="general" value="general" class="svc">General Questions</li>
+           <li><input class="checkbox" type="checkbox" name="other" id="other" value="other" class="svc">Other</li>
+           <li><input class="checkbox" type="checkbox" class="cursor" id="news" name="news" checked> Receive our Newsletters</label></li>
+         </ul>
+
+           <!-- <label id="newsletter"> <input type="checkbox" class="cursor" id="news" name="news" checked> Receive our newsletters</label> -->
+
+           <!-- <button type="submit" class="cursor" value="Submit">Submit</button>
+
+       </form>
+     </div> -->
+
+<div class="blue-cover">
+  <div class="wrapper2">
+    <form action="thanks.html">
+      <h2>Contact Us</h2>
+      <hr>
+      <p>Whether you just have a question, want to book a tour, or experience a tasting, fill out the form below and a Duke's representative will reach out to you as soon as possible. The quickest way to get an answer is to call our office at 606.223.3478 <br>
+       <br>
+      </p>
+     <br>
+     <label>First Name <br>
+     <input type="text" id="first-name" name="first-name" required></label>
+     <label>Last Name <br>
+     <input type="text" id="last-name" name="last-name" required></label>
+     <label>Email <br>
+     <input type="email" id="email" name="email" required></label>
+     <label>Phone Number<br>
+     <input type="phone" id="phone" name="phone" required></label>
+
+
+
+     <label>Message: <br>
+     <textarea id="message" required></textarea></label>
+
+
+       <p>Please indicate what subject your message involves:</p>
+     <ul>
+       <li><input class="checkbox" type="checkbox" name="tour" id="tour" value="tour" class="svc">Booking a Tour</li>
+       <li><input class="checkbox" type="checkbox" name="taste" id="taste" value="taste" class="svc">Experience a Moonshine Tasting</li>
+       <li><input class="checkbox" type="checkbox" name="general" id="general" value="general" class="svc">General Questions</li>
+       <li><input class="checkbox" type="checkbox" name="other" id="other" value="other" class="svc">Other</li>
+       <li><input class="checkbox" type="checkbox" class="cursor" id="news" name="news" checked> Receive our Newsletters</label></li>     </ul>
+
+       <!-- <label id="newsletter"> <input type="checkbox" class="cursor" id="news" name="news" checked> Receive our newsletters</label> -->
+
+       <button type="submit" class="cursor" value="Submit">Submit</button>
+
+   </form>
+   <div id="map">
+
+       <h2>Main Campus</h2>
+       <hr>
+
+       <p>
+        Phone Number:<a href="tel: 606-223-3478">(606)223-3478</a><br>
+       Email:<a href="mailto:info@dukesmoonshine.com"> info@dukesmoonshine.com </a><br>
+       Address: 2627 Generaley Blvd, Hazard, KY 41719
+<br>
+<br>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50807.199854660656!2d-83.23559071460049!3d37.2607550804076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8844c88c5bedbb27%3A0x485ecf9d61641623!2sHazard%2C%20KY!5e0!3m2!1sen!2sus!4v1650849989904!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+     </p>
+   </div>
+ </div>
+
 </div>
 
 </body>
