--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- NAVIGATION ENDS -->
 <!-- CONTENT OF THE PAGE BEGINS -->
 
-<div class="index-hero">
+<div id="#" class="index-hero">
 <h2>Welcome!</h2>
 </div>
 
@@ -152,7 +152,7 @@ The company has expanded over the years with the help of a great team. What star
      </div> -->
 
 <div class="blue-cover">
-  <div class="wrapper2">
+  <div id="contact" class="wrapper2">
     <form action="thanks.html">
       <h2>Contact Us</h2>
       <hr>
@@ -206,6 +206,25 @@ The company has expanded over the years with the help of a great team. What star
  </div>
 
 </div>
+
+<footer>
+  <div class="footer-nav" >
+      <a href="#home">Home<br></a>
+       <a href="#about">Our Story<br></a>
+      <a href="#products">Our Products<br></a>
+      <a href="#map">Location<br></a>
+      <a href="#contact">Contact<br></a>
+  </div>
+<br>
+   <div class="footer-contact" >
+      <a href= "mailto:info@dukesmoonshine.com">info@dukesmoonshine.com<br></a>
+      <a href="tel:+6062233478">606.223.3478</a>
+  </div>
+
+  <div class="wrapper">
+  <p>&copy; 2022 Duke's Moonshine Distillery, created by Charlotte Schepers Web Design | <a href="#">Back to top</a></p>
+   </div>
+</footer>
 
 </body>
 </html>
