added files from school mac

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ The company has expanded over the years with the help of a great team. What star
 <p class="brown-text">HANDCRAFTED MOONSHINE</p>
 </div>
 
+<div class="blue-cover">
 <h2>Interested in More?</h2>
 <p> We distill and create each and every Duke's jar at our Hazzard County distillery. We have a variety of flavors available to purchase in many stores. We often sell seasonal flavors, so keep an eye out!</p>
 
@@ -106,8 +107,9 @@ The company has expanded over the years with the help of a great team. What star
   </div>
 </ul>
 </div>
+</div>
 
-<div class="blue-cover">
+
   <div id="contact" class="wrapper2">
     <form action="thanks.html">
       <h2>Contact Us</h2>
@@ -163,9 +165,10 @@ The company has expanded over the years with the help of a great team. What star
    </div>
  </div>
 
-</div>
+
 
 <footer>
+
   <div class="footer-nav" >
       <a href="#home">Home<br></a>
        <a href="#about">Our Story<br></a>
@@ -180,7 +183,8 @@ The company has expanded over the years with the help of a great team. What star
   </div>
 
   <div class="wrapper">
-  <p>&copy; 2022 Duke's Moonshine Distillery, created by Charlotte Schepers Web Design | <a href="#">Back to top</a></p>
+  <p>&copy; 2022 Duke's Moonshine Distillery <br>
+     Created by Charlotte Schepers Web Design | <a href="#">Back to top</a></p>
    </div>
 </footer>
 
