--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ The company has expanded over the years with the help of a great team. What star
 <div class="row">
 
 <ul>
-  <div class="column">
+  <div class="column jars">
   <li>Apple Pie</li>
   <li>White Lightning</li>
   <li>Lemon Drop</li>
@@ -98,7 +98,7 @@ The company has expanded over the years with the help of a great team. What star
 
 
   </div>
-  <div class="column">
+  <div class="column jars">
   <li>Straight</li>
   <li>Peach</li>
   <li>Orange Cream</li>
@@ -160,32 +160,33 @@ The company has expanded over the years with the help of a great team. What star
 <br>
 <br>
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50807.199854660656!2d-83.23559071460049!3d37.2607550804076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8844c88c5bedbb27%3A0x485ecf9d61641623!2sHazard%2C%20KY!5e0!3m2!1sen!2sus!4v1650849989904!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50807.199854660656!2d-83.23559071460049!3d37.2607550804076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8844c88c5bedbb27%3A0x485ecf9d61641623!2sHazard%2C%20KY!5e0!3m2!1sen!2sus!4v1650849989904!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
      </p>
    </div>
  </div>
 
 
-
 <footer>
-
-  <div class="footer-nav" >
-      <a href="#home">Home<br></a>
-       <a href="#about">Our Story<br></a>
-      <a href="#products">Our Products<br></a>
-      <a href="#map">Location<br></a>
-      <a href="#contact">Contact<br></a>
+<div class="footer-grid">
+  <div class="left">
+    <a href="#home">Home<br></a>
+     <a href="#about">Our Story<br></a>
+    <a href="#products">Our Products<br></a>
+    <a href="#map">Location<br></a>
+    <a href="#contact">Contact<br></a>
   </div>
-<br>
-   <div class="footer-contact" >
-      <a href= "mailto:info@dukesmoonshine.com">info@dukesmoonshine.com<br></a>
-      <a href="tel:+6062233478">606.223.3478</a>
+  <div></div>
+  <div class="right">
+    <a href= "mailto:info@dukesmoonshine.com">info@dukesmoonshine.com</a>
+    <a href="tel:+6062233478">606.223.3478</a>
+    <a href="#">Where to Buy</a>
+    <a href="">Drink Responsibly</a>
+    <a href="">icon</a>
   </div>
 
-  <div class="wrapper">
-  <p>&copy; 2022 Duke's Moonshine Distillery <br>
-     Created by Charlotte Schepers Web Design | <a href="#">Back to top</a></p>
-   </div>
+</div> <!--footer grid-->
+<p>&copy; 2022 Duke's Moonshine Distillery</p>
+<p>Created by Charlotte Schepers Web Design</p>
 </footer>
 
 </body>
