--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@ The company has expanded over the years with the help of a great team. What star
 
 <div id="products" class="products">
 <img class="products-img" src="images/products.png" alt="moonshine jars">
+
+<div>
 <div class="brown-shadow">Get Your Hands On</div>
 <p class="brown-text">HANDCRAFTED MOONSHINE</p>
 </div>
+
+</div>
+
 
 <div class="blue-cover">
 <h2>Interested in More?</h2>
