updated overall site with minor styles changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <!-- NAVIGATION BEGINS -->
     <nav class="navbar">
-        <div id="home" class="logo-container">
-            <img class="logo-image" src="img/logo.png" alt="logo">
+        <div class="logo-container">
+          <a href="#"><img class="logo-image" src="img/logo.png" alt="logo"></a>
         </div>
         <ul id="nav-list" class="nav-menu">
             <li class="menu-item">
@@ -63,9 +63,9 @@
 <div class="header-img"></div>
 
 
-<h2 id="about">Our Story</h2>
+<h2 id="about" >Our Story</h2>
 
-
+<div class="about">
 <p>Duke’s Moonshine Distillery today is definitely different than from when it first started out. Duke’s has always been a family company and is still run by the family today. Founder, Jesse Duke, first started making moonshine when it was illegal. He would be considered a criminal for making our award-winning moonshine back then. He hid his moonshine still in the barn on the Duke farm and narrowly evaded law enforcement several times. The police at the time, knew he was up to know good, but all Jesse wanted to do was make his moonshine!<br>
 <br>
 He even had his young nephews making bootleg deliveries for him throughout the town. Duke’s moonshine was sought after by every farmer in the county. It quickly became a whole family ordeal, having to produce enough moonshine for the whole town! It was not until much later, laws were created to protect moonshiners. After a grueling process and specifically mandated equipment, Duke’s was legally up and running.<br>
@@ -75,13 +75,14 @@ Now, some may frown up Jesse Duke for his illegal activity, but we consider it t
 The company has expanded over the years with the help of a great team. What started out as just a still in a single building, is now a beautiful campus spanning several acres. We offer tours around the campus along with moonshine tastings. We can’t wait for ya to visit! <br>
 
 </p>
+</div>
 
-<div id="products" class="products">
+<div id="products" class="product-bkgd products">
 <img class="products-img" src="images/products.png" alt="moonshine jars">
 
-<div>
-<div class="brown-shadow">Get Your Hands On</div>
-<p class="brown-text">HANDCRAFTED MOONSHINE</p>
+
+<h2>Get Your Hands On</h2>
+<p>HANDCRAFTED MOONSHINE</p>
 </div>
 
 </div>
@@ -120,9 +121,9 @@ The company has expanded over the years with the help of a great team. What star
       <h2>Contact Us</h2>
       <hr>
       <p>Whether you just have a question, want to book a tour, or experience a tasting, fill out the form below and a Duke's representative will reach out to you as soon as possible. The quickest way to get an answer is to call our office at 606.223.3478 <br>
-       <br>
+
       </p>
-     <br>
+
      <label>First Name <br>
      <input type="text" id="first-name" name="first-name" required></label>
      <label>Last Name <br>
@@ -174,7 +175,7 @@ The company has expanded over the years with the help of a great team. What star
 <footer>
 <div class="footer-grid">
   <div class="left">
-    <a href="#home">Home<br></a>
+    <a href="#">Home<br></a>
      <a href="#about">Our Story<br></a>
     <a href="#products">Our Products<br></a>
     <a href="#map">Location<br></a>
@@ -182,16 +183,15 @@ The company has expanded over the years with the help of a great team. What star
   </div>
   <div></div>
   <div class="right">
-    <a href= "mailto:info@dukesmoonshine.com">info@dukesmoonshine.com</a>
-    <a href="tel:+6062233478">606.223.3478</a>
-    <a href="#">Where to Buy</a>
-    <a href="">Drink Responsibly</a>
-    <a href="">icon</a>
+    <a href= "mailto:info@dukesmoonshine.com"><b>Email</b>info@dukesmoonshine.com</a><br>
+    <a href="tel:+6062233478"><b>Phone</b>606.223.3478</a><br>
+    <a href="#">Where to Buy</a><br>
+    <a href="#">Drink Responsibly</a><br>
+    <a href="#"><img src="images/arrow.png" alt="arrow"></a>
   </div>
 
 </div> <!--footer grid-->
-<p>&copy; 2022 Duke's Moonshine Distillery</p>
-<p>Created by Charlotte Schepers Web Design</p>
+<p>&copy; 2022 Duke's Moonshine Distillery<br>Created by Charlotte Schepers Web Design</p>
 </footer>
 
 </body>
