Updated list styles
lol if def didnt upload this earlier

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@ The company has expanded over the years with the help of a great team. What star
 
 <ul>
   <div class="column jars">
-  <li>Apple Pie</li>
-  <li>White Lightning</li>
-  <li>Lemon Drop</li>
-  <li>Watermelon</li>
-  <li>Coffee</li>
+  <li><span class="apple"><img src="images/apple.png">Apple</li>
+  <li><span class="white-light"><img src="images/jar bullet.png">White Lightning</li>
+  <li><span class="lemon"><img src="images/lemon.png">Lemon Drop</li>
+  <li><span class="watermelon"><img src="images/watermelon.png">Watermelon</li>
+  <li><span class="coffee"><img src="images/coffee.png">Coffee</li>
 
 
   </div>
   <div class="column jars">
-  <li>Straight</li>
-  <li>Peach</li>
-  <li>Orange Cream</li>
-  <li>Cinnamon</li>
-    <li>Sweet Tea</li>
+  <li><span class="straight"><img src="images/jar bullet.png">Straight</li>
+  <li><span class="peach"><img src="images/peach.png">Peach</li>
+  <li><span class="orange"><img src="images/orange.png">Orange Cream</li>
+  <li><span class="cinnamon"><img src="images/cinnamon.png">Cinnamon</li>
+    <li><span class="sweet-tea"><img src="images/sweet tea.png">Sweet Tea</li>
   </div>
 </ul>
 </div>
