--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li class="menu-item">
                 <a href="#contact">Contact</a>
             </li>
+            <li class="menu-item">
+                <a href="https://charlotte-schepers.com/dukes-moonshine-distillery/">Designer Notes</a>
+            </li>
         </ul>
         <div id="nav-toggle" class="menu-icon">
             <div class="bar"></div>
